@@ -5,26 +5,27 @@ import com.example.conveyor.service.AmountCalculationService;
 import com.example.conveyor.service.RateCalculationService;
 import com.example.conveyor.service.ScoringService;
 import com.example.conveyor.utils.LoanOfferDTOComparator;
+import lombok.extern.slf4j.Slf4j;
 import org.json.JSONObject;
+import org.springframework.core.io.ClassPathResource;
 import org.springframework.stereotype.Service;
-import org.springframework.util.ResourceUtils;
+import org.springframework.util.FileCopyUtils;
 
-import java.io.File;
 import java.math.BigDecimal;
 import java.math.RoundingMode;
-import java.nio.file.Files;
+import java.nio.charset.StandardCharsets;
 import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.LinkedList;
 import java.util.List;
-import java.util.stream.Collectors;
 
+@Slf4j
 @Service
 public class ScoringServiceImpl implements ScoringService {
     private final RateCalculationService rateCalculationService;
     private final AmountCalculationService amountCalculationService;
-    private static BigDecimal INSURANCE;
-    private static BigDecimal STANDARD_RATE;
+    private BigDecimal insurance;
+    private BigDecimal standardRate;
 
     public ScoringServiceImpl(RateCalculationService rateCalculationService,
                               AmountCalculationService amountCalculationService) {
@@ -35,16 +36,16 @@ public class ScoringServiceImpl implements ScoringService {
 
     private void readDataForLoan() {
         try {
-            File file = ResourceUtils.getFile(ResourceUtils.CLASSPATH_URL_PREFIX + "data_for_loan.json");
-            JSONObject dataForLoan = new JSONObject(
-                    new String(Files.readAllBytes(file.toPath()))
-            );
+            ClassPathResource classPathResource = new ClassPathResource("data_for_loan.json");
+            byte[] fileAsBytes = FileCopyUtils.copyToByteArray(classPathResource.getInputStream());
+            JSONObject dataForLoan = new JSONObject(new String(fileAsBytes, StandardCharsets.UTF_8));
 
-            STANDARD_RATE = new BigDecimal(dataForLoan.getString("rate"));
-            INSURANCE = new BigDecimal(dataForLoan.getString("insurance"));
+            standardRate = new BigDecimal(dataForLoan.getString("rate"));
+            insurance = new BigDecimal(dataForLoan.getString("insurance"));
         } catch (Exception e) {
-            STANDARD_RATE = BigDecimal.valueOf(20);
-            INSURANCE = BigDecimal.valueOf(10000);
+            log.error("Error reading data for loan: {}", e.getMessage());
+            standardRate = BigDecimal.valueOf(20);
+            insurance = BigDecimal.valueOf(10000);
         }
     }
 
@@ -55,13 +56,13 @@ public class ScoringServiceImpl implements ScoringService {
         loanOffers.add(createOneOffer(false, true, loanApplicationRequest));
         loanOffers.add(createOneOffer(true, false, loanApplicationRequest));
         loanOffers.add(createOneOffer(true, true, loanApplicationRequest));
-        return loanOffers.stream().sorted(new LoanOfferDTOComparator()).collect(Collectors.toList());
+        return loanOffers.stream().sorted(new LoanOfferDTOComparator()).toList();
     }
 
     private LoanOfferDTO createOneOffer(Boolean isInsuranceEnabled,
                                         Boolean isSalaryClient,
                                         LoanApplicationRequestDTO applicationRequest) {
-        BigDecimal personalRate = rateCalculationService.viaSalaryClient(STANDARD_RATE, isSalaryClient);
+        BigDecimal personalRate = rateCalculationService.viaSalaryClient(standardRate, isSalaryClient);
         personalRate = rateCalculationService.viaInsurance(personalRate, isInsuranceEnabled);
 
         BigDecimal totalAmount = calculateTotalAmount(
@@ -84,7 +85,7 @@ public class ScoringServiceImpl implements ScoringService {
                                             Boolean isInsuranceEnabled,
                                             BigDecimal personalRate,
                                             Integer term) {
-        BigDecimal totalAmount = amountCalculationService.getAmountViaInsurance(amount, isInsuranceEnabled, INSURANCE);
+        BigDecimal totalAmount = amountCalculationService.getAmountViaInsurance(amount, isInsuranceEnabled, insurance);
         return amountCalculationService.getTotalAmountViaRate(totalAmount, personalRate, term);
     }
 
@@ -139,7 +140,7 @@ public class ScoringServiceImpl implements ScoringService {
     }
 
     private BigDecimal calculateRateForPersonalOffer(ScoringDataDTO scoringData) {
-        BigDecimal rate = STANDARD_RATE;
+        BigDecimal rate = standardRate;
         rate = rateCalculationService.viaGender(rate, scoringData.getGender(), scoringData.getBirthdate());
         rate = rateCalculationService.viaAge(rate, scoringData.getBirthdate());
         rate = rateCalculationService.viaWorkExperience(rate,
